--- a/about.html
+++ b/about.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1452"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1459"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1452" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1452"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1459" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1459"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1452">
-<script src="./assets/js/layout.ie.js?1.0.1452"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1459">
+<script src="./assets/js/layout.ie.js?1.0.1459"></script>
 <![endif]-->
-<link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
+<link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1452"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1459"></script>
 	
-    <title>About Smart Sprout Digital Marketing - Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1452">
-	<script src="./assets/js/script.js?1.0.1452"></script>
+    <title>About Smart Sprout Digital Marketing | Smart Sprout</title>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1459">
+	<script src="./assets/js/script.js?1.0.1459"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -326,7 +326,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </h2>
 	
 		<p class=" bd-textblock-25 bd-content-element">
-    Working in digital marketing over the last decade, I have become disheartened witnessing average businesses unable to access professional digital marketing support.&nbsp;<br><br><br>Until now, unless a business had a sizable marketing budget, digital marketing support was out of reach. Smart Sprout is a digital agency that promises to keep marketing costs affordable for everyone.
+    Working in digital marketing over the last decade, I have become disheartened witnessing average businesses unable to access professional digital marketing support.&nbsp;<br><br>Until now, unless a business had a sizable marketing budget, digital marketing support was out of reach. Smart Sprout is a digital agency that promises to keep marketing costs affordable for everyone.
 </p>
 	
 		<div class="bd-separator-12 bd-no-margins  bd-separator-center bd-separator-content-center clearfix" >
@@ -358,7 +358,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </h2>
 	
 		<p class=" bd-textblock-36 bd-content-element">
-    I will teach you and your team how to <b>produce magnetic content</b> and together we will build a results driven <b>content marketing strategy</b> and <b>outreach plan</b>. I will demonstrate a variety of on-page and off-page best practice which will place you well ahead of your competitors and in Google's good books.<br><br><br>This includes properly optimising your images, making the website more accessible for those with disabilities, correcting security vulnerabilities to avoid malicious attacks, and preparing each page so it is easily indexed by search engines and usable to visitors. It is essentially your choice how much time you want to put in and how much you want me to manage.
+    I will teach you and your team how to <b>produce magnetic content</b> and together we will build a results driven <b>content marketing strategy</b> and <b>outreach plan</b>. I will demonstrate a variety of on-page and off-page best practice which will place you well ahead of your competitors and in Google's good books.<br><br>This includes properly optimising your images, making the website more accessible for those with disabilities, correcting security vulnerabilities to avoid malicious attacks, and preparing each page so it is easily indexed by search engines and usable to visitors. It is essentially your choice how much time you want to put in and how much you want me to manage.
 </p></div></div>
 </div>
 	
@@ -465,7 +465,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	
 		<div class=" bd-customhtml-2 bd-tagstyles">
     <div class="bd-container-inner bd-content-element">
-        <p class="footer-links"><a href="https://smartsprout.co.uk/duplicate-content-faq" draggable="false" style="background-color: rgb(133, 133, 133);">What is Duplicate Content?</a><br></p><p class="footer-links"><a href="https://smartsprout.co.uk/404s-dead-links-missing-pages" draggable="false">404s, Dead Links and Missing Pages</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/redirect-chains-redirect-loops">301 Redirects and Redirect Errors</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/canonical-urls-canonical-tags">Canonical URLs and Canonical Tags</a></p><p class="footer-links"><br></p>
+        <p class="footer-links"><span style="background-color: rgb(133, 133, 133);"><a href="https://smartsprout.co.uk/duplicate-content">What is Duplicate Content?</a></span><br></p><p class="footer-links"><a href="https://smartsprout.co.uk/404s-dead-links-missing-pages" draggable="false">404s, Dead Links and Missing Pages</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/redirect-chains-redirect-loops">301 Redirects and Redirect Errors</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/canonical-urls-canonical-tags">Canonical URLs and Canonical Tags</a></p><p class="footer-links"><br></p>
     </div>
 </div></div></div>
 </div>
@@ -498,7 +498,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="bd-container-inner bd-content-element">
         <script type="application/ld+json">
 {
-	"@context": "http://schema.org",
+	"@context": "//schema.org",
 	"@type": "LocalBusiness",
 	"name": "Smart Sprout Affordable Digital Marketing",
 	"address": {
@@ -533,7 +533,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div class=" bd-pagefooter-2 hidden-md hidden-sm hidden-xs hidden-lg">
     <div class="bd-container-inner">
         
-            <a href='http://www.themler.io/html-templates' target="_blank">HTML Template</a> created with <a href='http://themler.io' target="_blank">Themler</a>.
+            <a href='//www.themler.io/html-templates' target="_blank">HTML Template</a> created with <a href='//themler.io' target="_blank">Themler</a>.
     </div>
 </div>
     </div>
