--- a/duplicate-content.html
+++ b/duplicate-content.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1452"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1459"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1452" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1452"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1459" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1459"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1452">
-<script src="./assets/js/layout.ie.js?1.0.1452"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1459">
+<script src="./assets/js/layout.ie.js?1.0.1459"></script>
 <![endif]-->
-<link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
+<link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1452"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1459"></script>
 	
-    <title>Duplicate Content FAQ - Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1452">
-	<script src="./assets/js/script.js?1.0.1452"></script>
+    <title>Duplicate Content | Smart Sprout</title>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1459">
+	<script src="./assets/js/script.js?1.0.1459"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -290,15 +290,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="bd-containereffect-4 container-effect container "><div class=" bd-layoutbox-10  bd-no-margins clearfix">
     <div class="bd-container-inner">
         <h1 class=" bd-textblock-13 bd-content-element">
-    Duplicate Content FAQ
+    Duplicate Content
 </h1>
 	
 		<h2 class=" bd-textblock-49 bd-content-element">
-    What is duplicate content?
+    What counts as duplicate content on a website?
 </h2>
 	
 		<p class=" bd-textblock-35 bd-content-element">
-    Duplicate content is a term used by search engines and digital marketers alike to describe content which is majority duplicated, internally (within your site) or externally (on another site).
+    Duplicate content is a term used by search engines and digital marketers alike to describe text-based content which is completely or majority duplicated, internally (within your site) or externally (on another site).
 </p>
 	
 		<h2 class=" bd-textblock-41 bd-content-element">
@@ -424,7 +424,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	
 		<div class=" bd-customhtml-2 bd-tagstyles">
     <div class="bd-container-inner bd-content-element">
-        <p class="footer-links"><a href="https://smartsprout.co.uk/duplicate-content-faq" draggable="false" style="background-color: rgb(133, 133, 133);">What is Duplicate Content?</a><br></p><p class="footer-links"><a href="https://smartsprout.co.uk/404s-dead-links-missing-pages" draggable="false">404s, Dead Links and Missing Pages</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/redirect-chains-redirect-loops">301 Redirects and Redirect Errors</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/canonical-urls-canonical-tags">Canonical URLs and Canonical Tags</a></p><p class="footer-links"><br></p>
+        <p class="footer-links"><span style="background-color: rgb(133, 133, 133);"><a href="https://smartsprout.co.uk/duplicate-content">What is Duplicate Content?</a></span><br></p><p class="footer-links"><a href="https://smartsprout.co.uk/404s-dead-links-missing-pages" draggable="false">404s, Dead Links and Missing Pages</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/redirect-chains-redirect-loops">301 Redirects and Redirect Errors</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/canonical-urls-canonical-tags">Canonical URLs and Canonical Tags</a></p><p class="footer-links"><br></p>
     </div>
 </div></div></div>
 </div>
@@ -457,7 +457,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="bd-container-inner bd-content-element">
         <script type="application/ld+json">
 {
-	"@context": "http://schema.org",
+	"@context": "//schema.org",
 	"@type": "LocalBusiness",
 	"name": "Smart Sprout Affordable Digital Marketing",
 	"address": {
@@ -492,7 +492,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div class=" bd-pagefooter-2 hidden-md hidden-sm hidden-xs hidden-lg">
     <div class="bd-container-inner">
         
-            <a href='http://www.themler.io/html-templates' target="_blank">HTML Template</a> created with <a href='http://themler.io' target="_blank">Themler</a>.
+            <a href='//www.themler.io/html-templates' target="_blank">HTML Template</a> created with <a href='//themler.io' target="_blank">Themler</a>.
     </div>
 </div>
     </div>
